@@ -2970,12 +2970,16 @@ HRESULT CSyncAP::CreateProposedOutputType(IMFMediaType* pMixerType, IMFMediaType
     VideoFormat = (MFVIDEOFORMAT*)pAMMedia->pbFormat;
     hr = pfMFCreateVideoMediaType(VideoFormat, &m_pMediaType);
 
-    m_AspectRatio.cx = VideoFormat->videoInfo.PixelAspectRatio.Numerator;
-    m_AspectRatio.cy = VideoFormat->videoInfo.PixelAspectRatio.Denominator;
+    CSize videoSize;
+    videoSize.cx = VideoFormat->videoInfo.dwWidth;
+    videoSize.cy = VideoFormat->videoInfo.dwHeight;
+    CSize aspectRatio;
+    aspectRatio.cx = VideoFormat->videoInfo.PixelAspectRatio.Numerator;
+    aspectRatio.cy = VideoFormat->videoInfo.PixelAspectRatio.Denominator;
 
     if (SUCCEEDED(hr)) {
-        i64Size.HighPart = VideoFormat->videoInfo.dwWidth;
-        i64Size.LowPart  = VideoFormat->videoInfo.dwHeight;
+        i64Size.HighPart = videoSize.cx;
+        i64Size.LowPart  = videoSize.cy;
         m_pMediaType->SetUINT64(MF_MT_FRAME_SIZE, i64Size.QuadPart);
         m_pMediaType->SetUINT32(MF_MT_PAN_SCAN_ENABLED, 0);
         const CRenderersSettings& r = GetRenderersSettings();
@@ -2987,34 +2991,44 @@ HRESULT CSyncAP::CreateProposedOutputType(IMFMediaType* pMixerType, IMFMediaType
         }
 
         m_LastSetOutputRange = r.m_AdvRendSets.iEVROutputRange;
-        i64Size.HighPart = m_AspectRatio.cx;
-        i64Size.LowPart  = m_AspectRatio.cy;
+        i64Size.HighPart = aspectRatio.cx;
+        i64Size.LowPart  = aspectRatio.cy;
         m_pMediaType->SetUINT64(MF_MT_PIXEL_ASPECT_RATIO, i64Size.QuadPart);
 
-        MFVideoArea Area = GetArea(0, 0, VideoFormat->videoInfo.dwWidth, VideoFormat->videoInfo.dwHeight);
+        MFVideoArea Area = GetArea(0, 0, videoSize.cx, videoSize.cy);
         m_pMediaType->SetBlob(MF_MT_GEOMETRIC_APERTURE, (UINT8*)&Area, sizeof(MFVideoArea));
     }
 
-    m_AspectRatio.cx *= VideoFormat->videoInfo.dwWidth;
-    m_AspectRatio.cy *= VideoFormat->videoInfo.dwHeight;
+    aspectRatio.cx *= videoSize.cx;
+    aspectRatio.cy *= videoSize.cy;
 
     bool bDoneSomething = true;
 
-    if (m_AspectRatio.cx >= 1 && m_AspectRatio.cy >= 1) {
+    if (aspectRatio.cx >= 1 && aspectRatio.cy >= 1) {
         while (bDoneSomething) {
             bDoneSomething = false;
-            int MinNum = min(m_AspectRatio.cx, m_AspectRatio.cy);
+            int MinNum = min(aspectRatio.cx, aspectRatio.cy);
             int i;
             for (i = 2; i < MinNum + 1; ++i) {
-                if (m_AspectRatio.cx % i == 0 && m_AspectRatio.cy % i == 0) {
+                if (aspectRatio.cx % i == 0 && aspectRatio.cy % i == 0) {
                     break;
                 }
             }
             if (i != MinNum + 1) {
-                m_AspectRatio.cx = m_AspectRatio.cx / i;
-                m_AspectRatio.cy = m_AspectRatio.cy / i;
+                aspectRatio.cx = aspectRatio.cx / i;
+                aspectRatio.cy = aspectRatio.cy / i;
                 bDoneSomething = true;
             }
+        }
+    }
+
+    if (videoSize != m_NativeVideoSize || aspectRatio != m_AspectRatio) {
+        m_NativeVideoSize = videoSize;
+        m_AspectRatio = aspectRatio;
+
+        // Notify the graph about the change
+        if (m_pSink) {
+            m_pSink->Notify(EC_VIDEO_SIZE_CHANGED, MAKELPARAM(m_NativeVideoSize.cx, m_NativeVideoSize.cy), 0);
         }
     }
 
