@@ -35,3 +35,5 @@ Legend:
   - fixed VMR9 D3DFS minimizing when losing focus
   - fixed thumb mouse buttons no working when D3DFS has focus
 ! Various fixes for better playlist support
+! Ticket #2109, #2975, Fix the handling of aspect ratio changes when using EVR-CP or Sync Renderer
+  with DXVA decoding
